feat(front) : 페이지 구현

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
+# application-secret.yml 파일을 무시하도록 설정
+/application-secret.yml
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
