--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
   servlet:
     context-path: /
     encoding:
@@ -18,6 +18,7 @@ spring:
   servlet:
     multipart:
       enabled: true
+      max-file-size: 10MB
 
   config:
     import: application-secret.yml
