--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -24,7 +24,6 @@ jobs:
       - name: Build with Gradle
         run: |
           echo ${{secrets.APPLICATION_SECRET}} | base64 --decode > ./src/main/resources/application-secret.yml
-          cat ./src/main/resources/application-secret.yml
           chmod +x ./gradlew
           ./gradlew build -x test
 
@@ -32,7 +31,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}vi c
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker
         run: docker build --platform linux/amd64 -t ${{ secrets.DOCKERHUB_USERNAME }}/interior . 
