--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -66,16 +66,16 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           username: ubuntu
-          host: ${{ secrets.BOOKEVERYWHERE_IP }}
+          host: ${{ secrets.INTERIOR_IP }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script_stop: true
           script: |
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/bookeverywhere:latest
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/interior:latest
             sudo docker-compose -f docker-compose-${{env.UPSTREAM}}.yml up -d
 
       - name: Check deploy server URL
         uses: jtalk/url-health-check-action@v3
         with:
-          url: https://${{ secrets.INTERIOR_URL }}/env 
+          url: https://${{ secrets.INTERIOR_URL }}
           max-attempts: 5
           retry-delay: 10s
