view : Footer 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,4 +55,5 @@ logging:
     org:
       springframework:
         security: DEBUG
-    rg.hibernate.type: trace
+      hibernate:
+        type: trace
